--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -35,18 +35,56 @@
 \maketitle
 
 \section{Ejercico 1}
-En el primer ejercicio se hace primero la simulación con las condiciones iniciales descritas. 
+Se hace primero la simulación con las condiciones iniciales descritas. Para poder resolver el sistema de ecuaciones diferenciales se utiliza el comando ode45. Este comando integra las ecuaciones diferenciales desde un tiempo inicial hasta un tiempo final, para obtener la respuesta respecto al tiempo de las funciones en el sistema de ecuaciones diferenciales. Este es un método de orden intermedio. Para resolver el sistema de ecuaciones se crea una función en matlab que describe el comportamiento diferencial del sistema, se le llama odefun. Esta recibe como parámetros un vector de estados, un vector de tiempo, y los parámetros a, b y c. Esta función se utiliza en ode45 para describir las ecuaciones y que este comando se encargue de hacer las integraciones necesarias para encontrar la solución. Se le indica  a ode45 que las variables que debe utilizar son el tiempo y los estados, y que tome los otros parámetros de odefun como constantes. 
+
+La salida de ode45 son 4 vectores. Uno para el tiempo, y los otros para los estados (los vectores de estados se obtienen en forma de matriz, pero es fácil de separarlos). Para encontrar el valor final se revisa la última entrada del vector de estados de la siguiente manera:
+
+%esto es codigo de matla. hay que ponerlo en formato
+
+\begin{lstlisting}[frame=single]
+    valor_final_primera_simulacion=x_sim_1(end,:)
+\end{lstlisting}
+
+El resultado obtenido es: $(x_f, y_f, z_f)=$(-1.3972, 0.3190, 5.7522).
+Las gráficas solicitadas se presentan en la figura \ref{fig:simulacion1_total}.
+
+Se hacen otras 4 simulaciones, la segunda y tercera simulación, son cambiando el parámetro b; la cuarta y quinta son cambiando las condiciones iniciales. En la tabla \ref{table:finales_ejercicio_1}, se presentan los resultados de los valores finales en cada simulación. Las gráficas de la segunda, tercera, cuarta y quinta simulación se presentan en las figuras \ref{fig:simulacion2_total}, \ref{fig:simulacion3_total}, \ref{fig:simulacion4_total}, \ref{fig:simulacion5_total} respectivamente. 
+
+A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los cambios en los parámetros. Note de la tabla \ref{table:finales_ejercicio_1}, que hay grandes cambios en el estado final, con pequeños cambios en los parámetros. Para poder analizar este fenómeno con mayor propiedad, se diseña un pequeño experimento de simulación. Cómo en las simulaciones propuestas, únicamente varía el parámetro b, entonces se decide hacer un barrido por los valores de b desde 4.85 hasta 8.6 en pasos de 0.05. Estos valores inicial y final son el mínimo valor y máximo de b con los que se hicieron las simulaciones pasadas. El resto de parámetros y el estado inicial, es el mismo que en la primera simulación. Entonces, para cada valor de b se grafica el valor final de los tres estados. El resultado se presenta en la gráfica \ref{fig:sensibilidad}. Es evidente que el estado final varía mucho, con cambios pequeños en la entrada. Entonces se concluye que el sistema es muy sensible.
+
+ 
+
+
+
+
+\begin{table}
+\caption{Valores finales de cada simulación}
+\label{table:finales_ejercicio_1}
+\centering
+\begin{tabular}{| c | c  c  c|}
+  \hline
+ Simulación & b   & $x_0$   & $x_f$   \\
+ \hline
+ Primera    & 4.85&( 2.3, -1.3,  10) &( -1.3972, 0.3190, 5.7522) \\
+ Segunda    & 8.5& ( 2.3, -1.3,  10) &( 2.8602,  1.4443, 2.7291) \\
+ Tercera    & 8.6& ( 2.3, -1.3,  10) &( 44.4532, 3.3235, 17.0307)\\
+ Cuarta     & 4.85&(-2.3,  1.3, -10) &( 8.0713,  0.4780, 8.3260)\\
+ Quinta     & 4.85&(-0.1, -1,    -1) &( 24.0736, 6.4495, 12.8533)\\
+ \hline
+
+\end{tabular}
+\end{table}
 
 
 %Primera simulacion ···········································································································································
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/primera_simulacion}
 		\caption{Resultado para primer caso de condiciones ininciales}
 		\label{fig:simulacion1}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/primera_simulacion_xy}
 		\caption{Vista XY de la primera simulación}
 		\label{fig:simulacion1xy}
@@ -57,7 +95,6 @@ En el primer ejercicio se hace primero la simulación con las condiciones inicia
 		\caption{Vista XZ de la primera simulación}
 		\label{fig:simulacion1xz}
 	\end{subfigure}
-
         \begin{subfigure}[b]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/primera_simulacion_yz}
 		\caption{Vista YZ de la primera simulación}
@@ -70,12 +107,12 @@ En el primer ejercicio se hace primero la simulación con las condiciones inicia
 %segunda simulacion ···········································································································································
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/segunda_simulacion}
 		\caption{Resultado para primer caso de condiciones ininciales}
 		\label{fig:simulacion2}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/segunda_simulacion_xy}
 		\caption{Vista XY de la segunda simulación}
 		\label{fig:simulacion2xy}
@@ -86,7 +123,6 @@ En el primer ejercicio se hace primero la simulación con las condiciones inicia
 		\caption{Vista XZ de la segunda simulación}
 		\label{fig:simulacion2xz}
 	\end{subfigure}
-
         \begin{subfigure}[b]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/segunda_simulacion_yz}
 		\caption{Vista YZ de la segunda simulación}
@@ -100,12 +136,12 @@ En el primer ejercicio se hace primero la simulación con las condiciones inicia
 
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/tercera_simulacion}
 		\caption{Resultado para primer caso de condiciones ininciales}
 		\label{fig:simulacion3}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/tercera_simulacion_xy}
 		\caption{Vista XY de la tercera simulación}
 		\label{fig:simulacion3xy}
@@ -116,7 +152,6 @@ En el primer ejercicio se hace primero la simulación con las condiciones inicia
 		\caption{Vista XZ de la tercera simulación}
 		\label{fig:simulacion3xz}
 	\end{subfigure}
-
         \begin{subfigure}[b]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/tercera_simulacion_yz}
 		\caption{Vista YZ de la tercera simulación}
@@ -126,18 +161,94 @@ En el primer ejercicio se hace primero la simulación con las condiciones inicia
 	\label{fig:simulacion3_total}
 \end{figure}
 
+%cuarta simulacion·····································································
+
+\begin{figure}
+	\centering
+	\begin{subfigure}[t]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/cuarta_simulacion}
+		\caption{Resultado para primer caso de condiciones ininciales}
+		\label{fig:simulacion4}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/cuarta_simulacion_xy}
+		\caption{Vista XY de la cuarta simulación}
+		\label{fig:simulacion4xy}
+	\end{subfigure}
+        \vfill
+        \begin{subfigure}[b]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/cuarta_simulacion_xz}
+		\caption{Vista XZ de la cuarta simulación}
+		\label{fig:simulacion4xz}
+	\end{subfigure}
+        \begin{subfigure}[b]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/cuarta_simulacion_yz}
+		\caption{Vista YZ de la cuarta simulación}
+		\label{fig:simulacion4yz}
+	\end{subfigure}
+	\caption{Cuarta simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
+	\label{fig:simulacion4_total}
+\end{figure}
+
+%quinta simulacion························································
+\begin{figure}
+	\centering
+	\begin{subfigure}[t]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/quinta_simulacion}
+		\caption{Resultado para primer caso de condiciones ininciales}
+		\label{fig:simulacion5}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/quinta_simulacion_xy}
+		\caption{Vista XY de la quinta simulación}
+		\label{fig:simulacion5xy}
+	\end{subfigure}
+        \vfill
+        \begin{subfigure}[b]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/quinta_simulacion_xz}
+		\caption{Vista XZ de la quinta simulación}
+		\label{fig:simulacion5xz}
+	\end{subfigure}
+        \begin{subfigure}[b]{0.36\textwidth}
+		\includegraphics[width=\textwidth]{pictures/quinta_simulacion_yz}
+		\caption{Vista YZ de la quinta simulación}
+		\label{fig:simulacion5yz}
+	\end{subfigure}
+	\caption{Quinta simulación gráfica de los estados. En los ejes se tienen los estados y el tiempo se denota con el cambio de color}
+	\label{fig:simulacion5_total}
+\end{figure}
 %Comparacion de los estados de las distintas simulaciones respecto al tiempo.···················································································
 
 \begin{figure}
 	\centering
 	\includegraphics[width=\textwidth]{pictures/comparacion}
-	\caption{Comparación de los estados de las distintas simulaciones respecto al tiempo}
+	\caption{Comparación de los estados de las distintas simulaciones respecto al tiempo. Se presentan en rojo, verde, azul, magenta, y cían respectivamente cada simulación.}
 	\label{fig:comparacion}
 \end{figure}
 
+%Sensibilidad respecto a los parámetros···················································································
 
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{pictures/sensibilidad}
+	\caption{Valor final de cada estado, dependiendo del valor de b}
+	\label{fig:sensibilidad}
+\end{figure}
 
-\subsubsection{Código de ejercicio 1}
+\subsection{Código del script principal}
+Del script principal, solo se agrega la parte inicial. Ya que el resto del código es una repetición de lo primero, pero para las otras simulaciones.
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily, firstline=6, lastline=45]{Ejercicio1.m}
+
+Se agrega también el código para hacer la gráfica comparativa de todos los estados en 10 segundos.
+
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily, firstline=161, lastline=197]{Ejercicio1.m}
+\subsection{Código de odefun()}
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily, firstline=5]{odefun.m}
+\subsection{Código de sensibilidad}
+Este código es parte del script principal. Pero como no es parte de lo que se pide explícitamente, entonces se agrega por aparte en este documento.
+ 
+\lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily, firstline=201]{Ejercicio1.m}
+
 
 
 
