Ajustar tamano de las imagenes en el reporte, para ejercicio1

--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -231,7 +231,7 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{pictures/comparacion}
+	\includegraphics[width=0.8\textwidth]{pictures/comparacion}
 	\caption{Comparación de los estados de las distintas simulaciones respecto al tiempo. Se presentan en rojo, verde, azul, magenta, y cían respectivamente cada simulación.}
 	\label{fig:comparacion}
 \end{figure}
@@ -240,7 +240,7 @@ A priori, se puede afirmar que este sistema presenta una alta sensibilidad a los
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{pictures/sensibilidad}
+	\includegraphics[width=0.8\textwidth]{pictures/sensibilidad}
 	\caption{Valor final de cada estado, dependiendo del valor de b}
 	\label{fig:sensibilidad}
 \end{figure}
