Arreglados problemas de merge

--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -275,13 +275,15 @@ entrada. Entonces se concluye que el sistema es muy sensible.
 \subsection{Código del script principal}
 Del script principal, solo se agrega la parte inicial. Ya que el resto del código es análogo al primero, pero para las otras simulaciones.
 \lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily, firstline=6, lastline=45]{Ejercicio1.m}
+
+Esta parte del cógigo se encarga de generar el gráfico comparativo de los estados respecto al tiempo. 
 \lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily, firstline=161, lastline=197]{Ejercicio1.m}
 
 \subsection{Código de odefun()}
 \lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily, firstline=5]{odefun.m}
 
 \subsection{Código de sensibilidad}
-Este segmento de código es parte del script principal.
+Este segmento de código es parte del script principal. Pero se agrega a parte porque no es parte de lo que se pide originalmente.
 \lstinputlisting[style=Matlab-editor, basicstyle=\mlttfamily, firstline=201]{Ejercicio1.m}
 
 \section{Ejercicio 2}
