--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -113,12 +113,12 @@ entrada. Entonces se concluye que el sistema es muy sensible.
 %Primera simulacion ···········································································································································
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/primera_simulacion}
 		\caption{Resultado para primer caso de condiciones iniciales}
 		\label{fig:simulacion1}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/primera_simulacion_xy}
 		\caption{Vista XY de la primera simulación}
 		\label{fig:simulacion1xy}
@@ -129,7 +129,6 @@ entrada. Entonces se concluye que el sistema es muy sensible.
 		\caption{Vista XZ de la primera simulación}
 		\label{fig:simulacion1xz}
 	\end{subfigure}
-
         \begin{subfigure}[b]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/primera_simulacion_yz}
 		\caption{Vista YZ de la primera simulación}
@@ -142,12 +141,12 @@ entrada. Entonces se concluye que el sistema es muy sensible.
 %segunda simulacion ···········································································································································
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/segunda_simulacion}
 		\caption{Resultado para primer caso de condiciones iniciales}
 		\label{fig:simulacion2}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/segunda_simulacion_xy}
 		\caption{Vista XY de la segunda simulación}
 		\label{fig:simulacion2xy}
@@ -158,7 +157,6 @@ entrada. Entonces se concluye que el sistema es muy sensible.
 		\caption{Vista XZ de la segunda simulación}
 		\label{fig:simulacion2xz}
 	\end{subfigure}
-
         \begin{subfigure}[b]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/segunda_simulacion_yz}
 		\caption{Vista YZ de la segunda simulación}
@@ -172,7 +170,7 @@ entrada. Entonces se concluye que el sistema es muy sensible.
 
 \begin{figure}
 	\centering
-	\begin{subfigure}[b]{0.36\textwidth}
+	\begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/tercera_simulacion}
 		\caption{Resultado para primer caso de condiciones iniciales}
 		\label{fig:simulacion3}
@@ -183,12 +181,11 @@ entrada. Entonces se concluye que el sistema es muy sensible.
 		\label{fig:simulacion3xy}
 	\end{subfigure}
         \vfill
-        \begin{subfigure}[b]{0.36\textwidth}
+        \begin{subfigure}[t]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/tercera_simulacion_xz}
 		\caption{Vista XZ de la tercera simulación}
 		\label{fig:simulacion3xz}
 	\end{subfigure}
-
         \begin{subfigure}[b]{0.36\textwidth}
 		\includegraphics[width=\textwidth]{pictures/tercera_simulacion_yz}
 		\caption{Vista YZ de la tercera simulación}
