--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -307,7 +307,7 @@ Al variar la carga de manera instantánea esto refleja un aumento en la retroali
   \label{fig:2_a_Id}
 \end{figure}
 
-
+En este caso
 
 \begin{figure}[ht!]
   \centering
