--- a/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
+++ b/matlab_02/Reporte/PracMatlab02_Grupo3_B42781_B47769_B42481.tex
@@ -255,7 +255,7 @@ A continuación se presentan las gráficas obtenidas en la simulación para este
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_a_Vin_Vout.eps}
-  \caption{Tension }
+  \caption{Tension de entrada y salida}
   \label{fig:2_a_Vin_Vout}
 \end{figure}
 
@@ -282,7 +282,7 @@ Al ser $V_d = V_{in}-V_{out}$ corresponderá a casi el doble pero de manera nega
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.8\linewidth]{pictures/Ejercicio2_a_carga.eps}
-  \caption{Diagrama de bloques en Simulink}
+  \caption{Corriente de Carga}
   \label{fig:2_a_carga}
 \end{figure}
 Para la carga ,por ley de ohm, si el voltaje de salida varía la corriente de carga lo hace de igual manera, obteniendo así la misma forma que la gráfica de salida del voltaje que en la figura \ref{fig:2_a_Vin_Vout}. 
@@ -473,12 +473,12 @@ bloque \texttt{Scope}.
   \label{fig:diag_simulink}
 \end{figure}
 
-En la figura \ref{fig:alt_cohete}, se muestra la gráfica de la altura resultante de la
-simulación. De esta forma, la altura empieza incrementado rápidamente, pero luego del instante $t=5$
-la concavidad de la curva cambia debido a que la velocidad del cohete empieza a disminuir ya que se
-agota el combustible. Posteriormente, la altura llega a un valor máximo para luego disminuir debido
-a que la velocidad se vuelve negativa por el efecto de la aceleración de la gravedad. Finalmente, la
-altura llega a $h=0$ y se mantiene en ese valor, lo cual indica que el cohete colisionó con el suelo.
+En la figura \ref{fig:alt_cohete}, se muestra la gráfica de la altura resultante de la simulación
+hasta el instante que el cohete regresa a la altura $h=0$. De esta forma, la altura empieza
+incrementado rápidamente, pero luego del instante $t=5$ la concavidad de la curva cambia debido a
+que la velocidad del cohete empieza a disminuir ya que se agota el combustible. Posteriormente, la
+altura llega a un valor máximo para luego disminuir debido a que la velocidad se vuelve negativa por
+el efecto de la aceleración de la gravedad.
 
 
 \begin{figure}[ht!]
